[gd_scene load_steps=7 format=2]

[ext_resource path="res://snake_ger.png" type="Texture" id=1]
[ext_resource path="res://TileMap.gd" type="Script" id=2]
[ext_resource path="res://game_end.mp3" type="AudioStream" id=3]
[ext_resource path="res://track for snake_2.mp3" type="AudioStream" id=4]
[ext_resource path="res://eat.mp3" type="AudioStream" id=5]

[sub_resource type="TileSet" id=1]
0/name = "snake_ger.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 3, 3 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "snake_ger.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 3, 0, 3, 3 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "snake_ger.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 6, 0, 3, 3 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "snake_ger.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 3, 3, 3 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "snake_ger.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 3, 3, 3, 3 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "snake_ger.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 6, 3, 3, 3 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "snake_ger.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 6, 3, 6 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "snake_ger.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 3, 6, 6, 3 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "snake_ger.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 3, 9, 3, 3 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[node name="Game" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 28, 15 )
tile_set = SubResource( 1 )
cell_size = Vector2( 3, 3 )
format = 1
tile_data = PoolIntArray( -1, 1610612736, 0, -65536, 1610612737, 0, -65535, 1610612737, 0, -65534, 1610612737, 0, -65533, 1610612737, 0, -65532, 1610612737, 0, -65531, 1610612737, 0, -65530, 1610612737, 0, -65529, 1610612737, 0, -65528, 1610612737, 0, -65527, 1610612737, 0, -65526, 1610612737, 0, -65525, 1610612737, 0, -65524, 1610612737, 0, -65523, 1610612737, 0, -65522, 1610612737, 0, -65521, 1610612737, 0, -65520, 1610612737, 0, -65519, 1610612737, 0, -65518, 1610612737, 0, -65517, 1610612737, 0, -65516, 1610612737, 0, -65515, 1610612737, 0, -65514, 1610612737, 0, -65513, 1610612737, 0, -65512, -1073741824, 0, 65535, -1610612735, 0, 24, -1073741823, 0, 131071, -1610612735, 0, 65560, -1073741823, 0, 196607, -1610612735, 0, 131096, -1073741823, 0, 262143, -1610612735, 0, 196632, -1073741823, 0, 327679, -1610612735, 0, 262146, 3, 0, 262147, 4, 0, 262148, 1610612741, 0, 262168, -1073741823, 0, 393215, -1610612735, 0, 327685, 2, 0, 327704, -1073741823, 0, 458751, -1610612735, 0, 393240, -1073741823, 0, 524287, -1610612735, 0, 458776, -1073741823, 0, 589823, -1610612735, 0, 524312, -1073741823, 0, 655359, -1610612735, 0, 589848, -1073741823, 0, 720895, -1610612735, 0, 655384, -1073741823, 0, 786431, -1610612735, 0, 720920, -1073741823, 0, 851967, -1610612735, 0, 786456, -1073741823, 0, 917503, -1610612735, 0, 851992, -1073741823, 0, 983039, -1610612735, 0, 917528, -1073741823, 0, 1048575, -1610612735, 0, 983064, -1073741823, 0, 1114111, -1610612735, 0, 1048600, -1073741823, 0, 1179647, -1610612736, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 0, 0 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="TileMap"]
wait_time = 0.5

[node name="BonusFood" type="Timer" parent="TileMap"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.396078, 0.45098, 0.572549, 1 )

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 27.0
margin_top = 6.0
margin_right = 35.0
margin_bottom = 14.0
text = "0"

[node name="BonusFood" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 91.0
margin_top = 6.0
margin_right = 101.0
margin_bottom = 14.0
align = 2

[node name="Audio" type="Node" parent="."]
pause_mode = 2

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )
volume_db = -6.0

[node name="Eat" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
volume_db = 12.0

[node name="GameEnd" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 3 )
volume_db = 12.0

[connection signal="timeout" from="TileMap/Timer" to="TileMap" method="_on_Timer_timeout"]
